<resources>
    <string name="app_name">Ustanovitev podjetja</string>
    <string name="welcome">Dobrodošli</string>

    <string name="welcome_screen_welcome">Dobrodošli!</string>
    <string name="welcome_screen_title1">Življenski dogodek</string>
    <string name="welcome_screen_title2">Ustanovitev podjetja</string>
    <string name="welcome_screen_names">(Imena članov)</string>
    <string name="welcome_screen_about_us">O nas</string>
    <string name="welcome_screen_class_name">Informacijski sistemi v upravi ©</string>

    <string name="forward">Nadaljuj</string>
    <string name="next">Naprej</string>
    <string name="share">Deli z drugimi</string>
    <string name="settings">Možnosti</string>

    <string name="navigation_drawer_open">Odpri meni</string>
    <string name="navigation_drawer_close">Zapri meni</string>

    <string name="faculty_name">Fakulteta za upravo</string>

    <string name="sp_full">Samostojni podjetnik</string>
    <string name="sp">s. p.</string>

    <string name="doo_full">Družba z omejeno odgovornostjo</string>
    <string name="doo">d. o. o.</string>

    <string name="dno_full">Družba z neomejeno odgovornostjo</string>
    <string name="dno">d. n. o.</string>

    <string name="dd_full">Delniška družba</string>
    <string name="dd">d. d.</string>

    <string name="choose_must_be_selected">Izbrati morate točno en odgovor!</string>
    <string name="display_details">Prikaz podrobnosti</string>
    <string name="details_for">Podrobnosti za</string>
    <string name="about_us">O nas</string>
    <string name="more">Več</string>
    <string name="coming_soon">Prihaja kmalu! ™</string>
</resources>
