<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context="com.slicky.isu.activities.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="spClick"
            android:background="@color/colorPrimary">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:text="@string/sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/sp_full"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="dooClick"
            android:background="@color/colorPrimary">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:text="@string/doo"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/doo_full"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="dnoClick"
            android:background="@color/colorPrimary">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:text="@string/dno"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/dno_full"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="ddClick"
            android:background="@color/colorPrimary">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:text="@string/dd"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/dd_full"/>
    </LinearLayout>

</LinearLayout>
