<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:background="@drawable/side_nav_bar"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark"
              android:orientation="vertical"
              android:gravity="bottom">

    <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/index"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageView"
            android:contentDescription="@string/faculty_name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_title2"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_title1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView1"/>

</LinearLayout>
